# ArchitectureEvolution

./: .gitignore  CMakeLists.txt  LICENSE  Pipeline.R  README.md  ScriptNetworkPlot.R  arc_evo.pro  box_plot_final_fit.R  env_change_type.cpp  env_change_type.h  env_param.cpp  environment.cpp  environment.h  get_code_cov.sh  ind_data.h  individual.cpp  individual.h  launch_env_change.h  launch_mut_type.h  launcher_functions.h  main.cpp  mut_spectr_script.R  mutation_type.cpp  mutation_type.h  network.cpp  network.h  netwrok_spectrum.cpp  netwrok_spectrum.h  node.cpp  node.h  observer.cpp  observer.h  parser.cpp  parser.h  population.cpp  population.h  range.cpp  range.h  rndutils.hpp  run_loop.sh  (+27 more)
.github/workflows/: check.yaml  hosted-pure-workflow.yml
bash scripts for sluster/: run_loop.sh  run_multiple_param_loop_Cmake_p_test.sh
scripts/: check_dead_links  do_oclint  get_code_cov  install_oclint
src/: CMakeLists.txt  Stopwatch.hpp  adaptation_period.cpp  adaptation_period.h  ann.hpp  env_change_type.cpp  env_change_type.h  env_param.h  environment.cpp  environment.h  evaluation_type.cpp  evaluation_type.h  ind_data.cpp  ind_data.h  individual.cpp  individual.h  launch_mut_type.h  launcher_functions.h  main.cpp  mutation_type.cpp  network.cpp  network.h  netwrok_spectrum.cpp  netwrok_spectrum.h  node.cpp  node.h  observer.cpp  observer.h  parser.cpp  parser.h  population.cpp  population.h  program_function_type.cpp  program_function_type.h  range.cpp  range.h  response_type.cpp  response_type.h  selection_type.h  simulation.cpp  (+4 more)
